--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.11-beta2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.11-beta2</version>
+        </dependency>
+        <dependency>
             <groupId>com.thoughtworks.gauge</groupId>
             <artifactId>gauge-java</artifactId>
             <version>${gauge.version}</version>
@@ -38,7 +48,6 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
-
     <repositories>
         <repository>
             <id>public</id>
